# secure-mqtt-client

./: CMakeLists.txt
src/: main.c
